# rezervo

./: .gitignore  README.md  api.py  auth.py  booking.env.example  booking.py  config.py  config.template.yaml  config_dist.yaml  consts.py  cron_generator.py  driver_utils.py  errors.py  mypy.ini  notify.py  pyproject.toml  requirements.txt  rezervo.py  sit_auth.env.example  time_utils.py
.github/workflows/: build-and-push-docker-image.yaml  check-fmt.yaml  check-lint.yaml  check-mypy.yaml  check-quality.yaml
assets/badges/: badge.psd
docker/: .env.template  Dockerfile  config.template.json  docker-compose.dev.yml  docker-compose.template.yml  entrypoint.sh  fusionauth-kickstart.json  limits_mods.conf
notify/: notify.py  slack.py  utils.py
rezervo/: .env.template  active_integrations.py  alembic.ini  api.py  apprise.template.yml  booking.py  cli.py  config.template.json  consts.py  cron.py  db.env.template  errors.py  fusionauth.env.template  http_client.py  main.py  models.py  sessions.py  settings.py  types.py
rezervo/alembic/: env.py
rezervo/alembic/versions/: 0314e548f6d7_chain_user_optional_password.py  09c91732a5b6_admin_config.py  13376b9e08a8_cal_token.py  141159a3cb17_config_unique_user.py  1b3fb86758bf_rename_chain_id_ttt_to_3t.py  250923213823_session_class_data.py  270c2f0a9a5a_add_last_used_to_push_notification_.py  27d034ace1bf_add_wait_list_position.py  32ee2ebb79d2_slack_class_notification_receipts.py  361dceb969cb_integration_user_integration_to_chain.py  44b71eadcdc6_config_cascade_on_user_deletion.py  4d51198ec426_rename_auth_token_to_auth_data.py  4f50495173a8_add_auth_lockout_timestamp.py  52c8a741cd0e_user_chain_totp.py  5545c1fc35b6_use_mapped_columns.py  5e049d589d59_lowercase_chain_identifier.py  6133793acba4_session_class_data_location_type_fix.py  6ce50e1900f7_planned_session.py  7544ddc090a7_add_scheduled_reminder_id_to_slack_.py  818d1317e773_integration_users_to_chain_users.py  837322532df2_push_notification_subscriptions_table.py  8823a3ebec51_slack_class_notification_receipt_.py  95f902617406_integration_users_table.py  9936e1c8eab5_user_class_sessions.py  9e4ae03dd225_create_config_and_user_models.py  a4c1db9f7b78_switch_to_jsonb.py  a82b4e463f7d_add_3t_identifier.py  a959d99283df_rename_totp_verified_at_to_auth_.py  a95d01b29b2a_rezervo_class_model_migration.py  b04ec6f8f6be_session_integration_to_chain.py  b4aca3032fdf_migrate_recurring_bookings_from_chain_.py  b795b5d14cf8_add_name_to_user.py  bfe6318d5525_add_integration_auth_token.py  c08f9b7a41ff_add_user_relations_table.py  ccf2b2be66fc_scheduled_push_notifications.py  cdf44f216db0_add_noshow_session_state.py  de62bf59065d_add_user_relation_table.py  eaf4986cfa58_add_integration_to_sessions.py  eeac56f2034e_add_expires_at_to_slack_class_.py  f30ee2562e70_required_unique_user_names.py  (+1 more)
rezervo/api/: activity_categories.py  api.py  booking.py  cal.py  chain_config.py  chains.py  check_in.py  classes.py  common.py  community.py  features.py  integration_config.py  preferences.py  schedules.py  sessions.py  slack.py  test_api.py  user.py  webhooks.py
rezervo/api/notifications/: push.py
rezervo/auth/: auth0.py  cookie.py  fusionauth.py  jwt.py
rezervo/chains/: active.py  chain.py  common.py  dotgym.py  fsc.py  sats.py  schema.py  sit.py  sporty.py  ttt.py
rezervo/cli/: cli.py  cron.py  sessions.py  users.py  x.py
rezervo/cli/fusionauth/: cli.py  consts.py  init.py  migrate.py  templates.py
rezervo/database/: base.py  crud.py  database.py
rezervo/integrations/: active.py  common.py  integration.py  sit.py
rezervo/integrations/fsc/: auth.py  booking.py  consts.py  integration.py  schedule.py  schema.py  sessions.py
rezervo/integrations/sit/: auth.py  booking.py  consts.py  integration.py  schedule.py  schema.py  sessions.py
rezervo/integrations/ttt/: auth.py  booking.py  consts.py  integration.py  schedule.py  schema.py  sessions.py
rezervo/notify/: apprise.py  notify.py  push.py  scheduled.py  slack.py  types.py  utils.py
rezervo/providers/: active.py  auth.py  common.py  helpers.py  provider.py  schedule.py  schema.py  sessions.py
rezervo/providers/brpsystems/: auth.py  booking.py  provider.py  schedule.py  schema.py  sessions.py
rezervo/providers/ibooking/: auth.py  auth_session.py  booking.py  consts.py  provider.py  schedule.py  schema.py  sessions.py  urls.py
rezervo/providers/mirage/: openapi.json  provider.py  schema_generated.py  settings.py
rezervo/providers/sats/: auth.py  consts.py  helpers.py  provider.py  schedule.py  schema.py  urls.py
rezervo/recurrence/: recurrence.py
rezervo/schemas/: base.py  booking.py  camel.py  community.py  features.py  schedule.py  session.py  slack.py
rezervo/schemas/config/: admin.py  app.py  config.py  stored.py  user.py
rezervo/utils/: aiohttp_utils.py  apprise_utils.py  avatar_utils.py  category_utils.py  config_utils.py  cron_utils.py  ical_utils.py  logging_utils.py  playwright_utils.py  pydantic_utils.py  santa_utils.py  sit_utils.py  ssl_utils.py  str_utils.py  time_utils.py  typing_utils.py
sit_rezervo/: api.py  auth.py  booking.py  cli.py  config.py  config.template.json  consts.py  cron_generator.py  main.py  models.py  settings.py  types.py
sit_rezervo/alembic/: env.py
sit_rezervo/alembic/versions/: 09c91732a5b6_admin_config.py  13376b9e08a8_cal_token.py  141159a3cb17_config_unique_user.py  250923213823_session_class_data.py  44b71eadcdc6_config_cascade_on_user_deletion.py  6ce50e1900f7_planned_session.py  9936e1c8eab5_user_class_sessions.py  9e4ae03dd225_create_config_and_user_models.py  a4c1db9f7b78_switch_to_jsonb.py  b795b5d14cf8_add_name_to_user.py
sit_rezervo/auth/: auth0.py  fsc.py  jwt.py  sit.py
sit_rezervo/database/: base.py  crud.py  database.py
sit_rezervo/notify/: notify.py  slack.py  utils.py
sit_rezervo/schemas/: base.py  schedule.py  session.py
sit_rezervo/schemas/config/: admin.py  app.py  config.py  stored.py  user.py
sit_rezervo/utils/: config_utils.py  cron_utils.py  ical_utils.py  sit_utils.py  str_utils.py  time_utils.py
(+1 files in other folders)
