[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rezervo"
version = "0.1.0"
description = "Automatic booking of group classes"
authors = ["Mathias Oterhals Myklebust <mathias@oterbust.no>"]
readme = "README.md"
packages = [{include = "rezervo"}]
repository = "https://github.com/mathiazom/rezervo"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mathiazom/rezervo/issues"

[tool.poetry.scripts]
rezervo = "rezervo.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.0"
fastapi = "^0.136.1"
requests = "^2.33.1"
pytz = "^2026.2"
typer = "^0.25.1"
slack-sdk = "^3.41.0"
uvicorn = "^0.46.0"
python-multipart = "^0.0.27"
dataclass-wizard = {extras = ["yaml"], version = "^0.39.1"}
pyjwt = "^2.12.1"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.12"
rich = "^15.0.0"
python-crontab = "^3.3.0"
deepmerge = "^2.0"
auth0-python = "^5.4.0"
icalendar = "^5.0.7"
pywebpush = "^2.3.0"
croniter = "^2.0.1"
humanize = "^4.15.0"
pyhumps = "^3.8.0"
asyncer = "^0.0.17"
tabulate = "^0.10.0"
cron-descriptor = "^2.0.8"
aiohttp = "^3.13.5"
pillow = "^12.2.0"
playwright = "^1.59.0"
xxhash = "^3.7.0"
apprise = "^1.10.0"
isoweek = "^1.3.3"
psutil = "^7.2.2"
fusionauth-client = "^1.65.0"
tldextract = "^5.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
poethepoet = "^0.22.0"
black = "^24.4.0"
ruff = "^0.4.1"
types-python-crontab = "^3.0.0.1"
types-pyyaml = "^6.0.12.12"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2023.3.1.1"
types-requests = "^2.31.0.10"
types-tabulate = "^0.9.0.20240106"
types-pillow = "^10.2.0.20240311"
types-psutil = "^6.1.0.20241221"

[tool.poe.tasks]
fix = ["fmt", "lintfix"]

[tool.poe.tasks.check]
sequence = ["typecheck", "lint"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.fmt]
cmd = "black rezervo"
help = "Format code using black"

[tool.poe.tasks.fmtcheck]
cmd = "black --check rezervo"
help = "Check formatting using black"

[tool.poe.tasks.lintfix]
cmd = "ruff check rezervo --fix"
help = "Lint and fix code using ruff"

[tool.poe.tasks.lint]
cmd = "ruff check rezervo"
help = "Lint code using ruff"

[tool.poe.tasks.typecheck]
cmd = "mypy rezervo"
help = "Check typing using mypy"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"rezervo/alembic/env.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true
