[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rezervo"
version = "0.1.0"
description = "Automatic booking of group classes"
authors = [{ name = "Mathias Oterhals Myklebust", email = "mathias@oterbust.no" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.0,<3",
    "fastapi>=0.136.1,<0.137",
    "requests>=2.33.1,<3",
    "pytz>=2026.2,<2027",
    "typer>=0.25.1,<0.26",
    "slack-sdk>=3.41.0,<4",
    "uvicorn>=0.46.0,<0.47",
    "python-multipart>=0.0.27,<0.0.28",
    "dataclass-wizard[yaml]>=0.39.1,<0.40",
    "pyjwt>=2.12.1,<3",
    "sqlalchemy>=2.0.49,<3",
    "alembic>=1.18.4,<2",
    "psycopg2-binary>=2.9.12,<3",
    "rich>=15.0.0,<16",
    "python-crontab>=3.3.0,<4",
    "deepmerge>=2.0,<3",
    "auth0-python>=5.4.0,<6",
    "icalendar>=7.1.0,<8",
    "pywebpush>=2.3.0,<3",
    "croniter>=6.2.2,<7", # required by python-crontab schedule feature
    "humanize>=4.15.0,<5",
    "pyhumps>=3.8.0,<4",
    "asyncer>=0.0.17,<0.0.18",
    "tabulate>=0.10.0,<0.11",
    "cron-descriptor>=2.0.8,<3",
    "aiohttp>=3.13.5,<4",
    "pillow>=12.2.0,<13",
    "playwright>=1.59.0,<2",
    "xxhash>=3.7.0,<4",
    "apprise>=1.10.0,<2",
    "isoweek>=1.3.3,<2",
    "psutil>=7.2.2,<8",
    "fusionauth-client>=1.65.0,<2",
    "tldextract>=5.3.1,<6",
]

[project.urls]
Repository = "https://github.com/mathiazom/rezervo"
"Bug Tracker" = "https://github.com/mathiazom/rezervo/issues"

[project.scripts]
rezervo = "rezervo.cli.cli:cli"

[dependency-groups]
dev = [
    "ty>=0.0.56,<0.1",
    "poethepoet>=0.22.0,<0.23",
    "ruff>=0.15.20,<0.16",
    "types-python-crontab>=3.0.0.1,<4",
    "types-pytz>=2023.3.1.1,<2024",
    "types-requests>=2.31.0.10,<3",
    "types-tabulate>=0.9.0.20240106,<0.10",
    "types-psutil>=6.1.0.20241221,<7",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["rezervo"]
module-root = ""

[tool.poe.tasks]
fix = ["fmt", "lintfix"]

[tool.poe.tasks.check]
sequence = ["typecheck", "lint"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.fmt]
cmd = "ruff format rezervo"
help = "Format code using ruff"

[tool.poe.tasks.fmtcheck]
cmd = "ruff format --check rezervo"
help = "Check formatting using ruff"

[tool.poe.tasks.lintfix]
cmd = "ruff check rezervo --fix"
help = "Lint and fix code using ruff"

[tool.poe.tasks.lint]
cmd = "ruff check rezervo"
help = "Lint code using ruff"

[tool.poe.tasks.typecheck]
cmd = "ty check rezervo"
help = "Check typing using ty"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by the ruff formatter
    "B008",   # do not perform function calls in argument defaults (needed by FastAPI/typer)
    "RUF012", # mutable class defaults: false positives on pydantic fields and SQLAlchemy declarative config
]

[tool.ruff.lint.per-file-ignores]
"rezervo/alembic/env.py" = ["E402"]
"rezervo/alembic/versions/*.py" = ["SIM"]  # generated migration scripts

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = ["rezervo/alembic/"]

[tool.ty.terminal]
error-on-warning = true
