[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rezervo"
version = "0.1.0"
description = "Automatic booking of group classes"
authors = [{ name = "Mathias Oterhals Myklebust", email = "mathias@oterbust.no" }]
requires-python = ">=3.14,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
    "fastapi>=0.139.0,<0.140",
    "requests>=2.34.2,<3",
    "pytz>=2026.2,<2027",
    "typer>=0.26.8,<0.27",
    "slack-sdk>=3.43.0,<4",
    "uvicorn>=0.50.0,<0.51",
    "python-multipart>=0.0.32,<0.0.33",
    "pyjwt>=2.13.0,<3",
    "sqlalchemy>=2.0.51,<3",
    "alembic>=1.18.5,<2",
    "psycopg2-binary>=2.9.12,<3",
    "rich>=15.0.0,<16",
    "python-crontab>=3.3.0,<4",
    "deepmerge>=2.1.0,<3",
    "auth0-python>=5.8.0,<6",
    "icalendar>=7.2.0,<8",
    "pywebpush>=2.3.0,<3",
    "croniter>=6.2.3,<7", # required by python-crontab schedule feature
    "humanize>=4.16.0,<5",
    "pyhumps>=3.8.0,<4",
    "asyncer>=0.0.18,<0.0.19",
    "tabulate>=0.10.0,<0.11",
    "cron-descriptor>=2.1.0,<3",
    "aiohttp>=3.14.1,<4",
    "pillow>=12.3.0,<13",
    "playwright>=1.61.0,<2",
    "xxhash>=3.8.0,<4",
    "apprise>=1.12.0,<2",
    "isoweek>=1.3.3,<2",
    "psutil>=7.2.2,<8",
    "fusionauth-client>=1.68.0,<2",
]

[project.urls]
Repository = "https://github.com/mathiazom/rezervo"
"Bug Tracker" = "https://github.com/mathiazom/rezervo/issues"

[project.scripts]
rezervo = "rezervo.cli.cli:cli"

[dependency-groups]
dev = [
    "ty>=0.0.56,<0.1",
    "poethepoet>=0.47.1,<0.48",
    "datamodel-code-generator>=0.35.0,<0.36",
    "ruff>=0.15.20,<0.16",
    "types-python-crontab>=3.3.0.20260518,<4",
    "types-pytz>=2026.2.0.20260518,<2027",
    "types-requests>=2.33.0.20260518,<3",
    "types-tabulate>=0.10.0.20260508,<0.11",
    "types-psutil>=7.2.2.20260518,<8",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["rezervo"]
module-root = ""

[tool.poe.tasks]
fix = ["fmt", "lintfix"]

[tool.poe.tasks.mirage-codegen]
cmd = """
datamodel-codegen
  --input rezervo/providers/mirage/openapi.json
  --input-file-type openapi
  --output rezervo/providers/mirage/schema_generated.py
  --output-model-type pydantic_v2.BaseModel
  --use-standard-collections
  --use-union-operator
  --use-schema-description
  --collapse-root-models
  --disable-timestamp
"""
help = "Generate mirage Pydantic models from the vendored openapi.json"

[tool.poe.tasks.mirage-openapi]
shell = """
curl -fsS "${REZERVO_MIRAGE_BASE_URL}/api/openapi.json" \
  | python -c "import json,sys; json.dump(json.load(sys.stdin), open('rezervo/providers/mirage/openapi.json','w'), indent=2, ensure_ascii=False); open('rezervo/providers/mirage/openapi.json','a').write(chr(10))"
"""
help = "Refetch mirage openapi.json from REZERVO_MIRAGE_BASE_URL (then run mirage-codegen)"

[tool.poe.tasks.check]
sequence = ["typecheck", "lint"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.fmt]
cmd = "ruff format rezervo"
help = "Format code using ruff"

[tool.poe.tasks.fmtcheck]
cmd = "ruff format --check rezervo"
help = "Check formatting using ruff"

[tool.poe.tasks.lintfix]
cmd = "ruff check rezervo --fix"
help = "Lint and fix code using ruff"

[tool.poe.tasks.lint]
cmd = "ruff check rezervo"
help = "Lint code using ruff"

[tool.poe.tasks.typecheck]
cmd = "ty check rezervo"
help = "Check typing using ty"

[tool.ruff]
extend-exclude = ["rezervo/providers/mirage/schema_generated.py"]  # generated by datamodel-code-generator

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by the ruff formatter
    "B008",   # do not perform function calls in argument defaults (needed by FastAPI/typer)
    "RUF012", # mutable class defaults: false positives on pydantic fields and SQLAlchemy declarative config
]

[tool.ruff.lint.per-file-ignores]
"rezervo/alembic/env.py" = ["E402"]
"rezervo/alembic/versions/*.py" = ["SIM"]  # generated migration scripts

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["rezervo/alembic/", "rezervo/providers/mirage/schema_generated.py"]

[tool.ty.terminal]
error-on-warning = true
